Create form for contact in contact page

--- a/public/styles/_contact.scss
+++ b/public/styles/_contact.scss
@@ -1,9 +1,99 @@
+@import './functions';
+
 .contact_container{
-    @include display-flex( column, flex-start );
-    align-items: flex-start;
-    min-height: calc(100vh - 11.6em);;
-    max-width: 100%;
+    @include display-flex( column, flex-start);
+    align-items: center;
+    min-height: calc(100vh - 12em);;
+    max-width: 80%;
     box-sizing: border-box;
+    margin: 0 auto;
+
+        & form{
+            @include display-flex(column, center);
+            width: 100%;
+
+            & p{
+                margin: 0;
+                @include font-size($dfm,$mfm);
+                 & label{
+                    @include display-flex(column, flex-start);
+                    align-items: flex-start;
+                        & textarea{
+                            resize: none;
+                        }
+                 }
+            }
+
+        }
+
+        .policy{
+            @include display-flex(row, space-around);
+            margin-bottom: 0;
+            box-sizing: border-box;
+                & p{
+                    @include font-size($dfs,$mfs);
+                }
+                & input{
+                    width: 2em;
+                    height: 2em;
+                }
+        }
+        
+
+}
+
+@media only screen and (max-width: 901px) {
+    .contact_container{
+        & form {
+            margin: 3em 0 0 0;
+
+               & p {
+                   width: 100%;
+                   & * {
+                       width: 100%;
+                       margin: 0;
+                       padding: 0;
+                       box-sizing: border-box;
+                   }
+               }
+
+               & .paragraph:nth-child(1) {
+                margin-bottom: 2em;
+                }
+
+               & .paragraph:nth-child(1) label input {
+                height: 3em;
+                }
+
+               & .paragraph:nth-child(2) label textarea {
+                   height: 15em;
+               }
+                
+                & div{
+                    margin: 3em 0;
+                }
+                
+                .policy {
+                    & .paragraph{
+                        margin-bottom: 0;
+                        text-align: left;
+                        padding-right: 1em;
+                        margin: 0;
+                    }
+                }
+        }
+    }
+}
 
 
+@media only screen and (min-width: 901px) {
+    .contact_container{
+        & form {
+            margin: 6em 0 0 0;
+
+            & div{
+                margin: 6em 0;
+            }
+        }
+    }
 }
