--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -33,6 +33,10 @@ body, html{
     scroll-behavior: smooth;
 }
 
+.hidden_form{
+    display: none;
+}
+
 .menu{  
     width: 100%;
     height: 6em;
