--- a/public/styles/_burger.scss
+++ b/public/styles/_burger.scss
@@ -1,10 +1,10 @@
 @import './utilities';
 
 .burgerek{
-    background-color: $base-color;
+    background-color: white;
     transition: all .5s linear;
     min-width : 100%;
-    height: 50%;
+    height: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,7 +20,7 @@
             height: 25%; 
             color: white;
                 a{
-                    color: white;
+                    color: black;
                 }
         }
 }
