Replace datocms with contentful engine
Datocms was more expensive for that case

--- a/public/styles/_burger.scss
+++ b/public/styles/_burger.scss
@@ -2,7 +2,7 @@
 
 .burgerek{
     background-color: white;
-    transition: all .5s linear;
+    transition: all 0.7s linear;
     min-width : 100%;
     height: 40%;
     display: flex;
