--- a/public/styles/_offers.scss
+++ b/public/styles/_offers.scss
@@ -3,10 +3,12 @@
 .offers_container{
     @include display-flex( column, flex-start );
     align-items: flex-start;
-    min-height: calc(100vh - 11.6em);;
+    min-height: calc(100vh - 12em);;
     max-width: 80%;
     margin: 0 auto;
     box-sizing: border-box;
+    
+    
 
         & .offers{
             display: grid;
@@ -15,7 +17,6 @@
             grid-gap: 2em;
             width: 100%;
             max-width: 100%;
-            position: relative;
                 & div {
                     border: black 2px solid;
                         & span {
@@ -95,7 +96,11 @@
                     }
 
         }
-
+        .center{
+            position: absolute;
+            left: 0;
+            height: calc(100% - 6em);
+        }
 }
 
 .message_buton_wrapper{
