--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,6 +6,7 @@ body, html {
   min-height: 100%;
   position: relative;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 #root {
@@ -128,8 +129,8 @@ body, html {
 
 .menu .burgerek {
   background-color: white;
-  -webkit-transition: all .5s linear;
-  transition: all .5s linear;
+  -webkit-transition: all 0.7s linear;
+  transition: all 0.7s linear;
   min-width: 100%;
   height: 40%;
   display: -webkit-box;
@@ -360,7 +361,7 @@ body, html {
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative;
-  min-height: calc(100vh - 11.6em);
+  min-height: calc(100vh - 12em);
 }
 
 .image_test div {
@@ -400,26 +401,6 @@ body, html {
   display: none;
 }
 
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
 .social-media {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -449,6 +430,10 @@ body, html {
 
 .social-media-and-description {
   position: relative;
+  -webkit-animation-duration: 1.4s;
+          animation-duration: 1.4s;
+  -webkit-animation-name: slidein;
+          animation-name: slidein;
 }
 
 .social-media-and-description .description h1 {
@@ -532,6 +517,10 @@ body, html {
   .mobile_bg_container img {
     max-width: 100%;
     height: auto;
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-name: slidein2;
+            animation-name: slidein2;
   }
 }
 
@@ -586,9 +575,17 @@ body, html {
   }
   .home_offers .offer_in_homepage:nth-child(odd) {
     margin-left: auto;
+    -webkit-animation-duration: 1.4s;
+            animation-duration: 1.4s;
+    -webkit-animation-name: slidein2;
+            animation-name: slidein2;
   }
   .home_offers .offer_in_homepage:nth-child(even) {
     margin-right: auto;
+    -webkit-animation-duration: 1.4s;
+            animation-duration: 1.4s;
+    -webkit-animation-name: slidein;
+            animation-name: slidein;
   }
   .offer_in_homepage {
     display: -webkit-box;
@@ -732,6 +729,78 @@ body, html {
   }
   .offer_in_homepage p span {
     width: 5.5em;
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes slidein {
+  from {
+    -webkit-transform: translateX(-30%);
+            transform: translateX(-30%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slidein {
+  from {
+    -webkit-transform: translateX(-30%);
+            transform: translateX(-30%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slidein2 {
+  from {
+    -webkit-transform: translateX(30%);
+            transform: translateX(30%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slidein2 {
+  from {
+    -webkit-transform: translateX(30%);
+            transform: translateX(30%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
   }
 }
 
@@ -902,7 +971,7 @@ body, html {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  min-height: calc(100vh - 11.6em);
+  min-height: calc(100vh - 12em);
   max-width: 80%;
   margin: 0 auto;
   -webkit-box-sizing: border-box;
@@ -919,7 +988,6 @@ body, html {
   grid-gap: 2em;
   width: 100%;
   max-width: 100%;
-  position: relative;
 }
 
 .offers_container .offers div {
@@ -1071,6 +1139,12 @@ body, html {
   height: 90px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+}
+
+.offers_container .center {
+  position: absolute;
+  left: 0;
+  height: calc(100% - 6em);
 }
 
 .message_buton_wrapper {
