--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -270,6 +270,24 @@ body, html {
   }
 }
 
+.menu .cart a {
+  width: 100%;
+  text-decoration: none;
+  color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 .footer {
   width: 100%;
   height: auto;
@@ -1436,6 +1454,130 @@ body, html {
     margin-bottom: 0;
     text-align: left;
     margin: 0;
+  }
+}
+
+.cart_container {
+  min-height: calc(100vh - 12em);
+  width: 80%;
+  margin: auto;
+}
+
+@media only screen and (max-width: 900px) {
+  .cart_container h1 {
+    font-size: 1.4rem;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .cart_container h1 {
+    font-size: 2.6rem;
+  }
+}
+
+.cart_container.full {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.cart_container.full h1 {
+  text-align: left;
+}
+
+.cart_container.empty {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  align-items: center;
+}
+
+.cart_container.empty h1 {
+  text-align: center;
+}
+
+.cart_container.empty img {
+  margin-bottom: 3em;
+}
+
+.cart_container.empty div::after {
+  display: none;
+}
+
+.products_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  border: black 2px solid;
+}
+
+.products_container span {
+  border-bottom: black 2px solid;
+  width: 100%;
+  height: 4em;
+}
+
+.products_container span:last-child {
+  border: 0;
+}
+
+@media only screen and (max-width: 901px) {
+  .cart_container h1 {
+    margin: 3rem 0 3rem 0;
+  }
+  .cart_container.empty img {
+    margin-bottom: 3em;
+    max-width: 70%;
+  }
+  .cart_container.empty div {
+    margin-bottom: 3em;
+  }
+}
+
+@media only screen and (min-width: 901px) {
+  .cart_container h1 {
+    margin: 6rem 0 3rem 0;
+  }
+  .cart_container.empty img {
+    margin-bottom: 3em;
+    max-width: 20%;
+  }
+  .cart_container.empty div {
+    margin-bottom: 6rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
