--- a/public/styles/_cart.scss
+++ b/public/styles/_cart.scss
@@ -35,12 +35,50 @@
 
 .products_container{
     @include display-flex(column, flex-start);
-    width: 100%;
     border: black 2px solid;
+    width: 100%;
         & span{
             border-bottom: black 2px solid;
             width: 100%;
-            height: 4em;
+            @include display-flex(column, center);
+                & div{
+                    max-height: 100%;
+                    height: 100%;
+                }
+                & .product_image{
+                    height: 100%;
+                    @include display-flex(row, space-between);
+                    padding-bottom: 1em;
+                    & img{
+                        max-width: 50%;
+                        max-height: 100%;
+                        padding: 0 0 0 1em ;
+                        box-sizing: border-box;
+                    }
+                    & div{
+                       margin: 0 auto 0 1em;
+                    }
+                }
+                & .products_description{
+                    @include display-flex(row, space-between);
+                    width: 100%;
+                    padding: 1em;
+                    box-sizing: border-box;
+                    & h2 {
+                        margin: 0;
+                        @include font-size($dfm,$mfm);
+                    }
+                     & p {
+                        margin: 0;
+                        @include font-size($dfm,$mfm);
+                    }
+                }
+                & .delete_product{
+                    @include display-flex(row, flex-start);
+                    width: 100%;
+                    padding: 0 1em 1em 1em;
+                    box-sizing: border-box;
+                }
         }
         & span:last-child{
             border: 0;
