--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1541,14 +1541,133 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
   border: black 2px solid;
+  width: 100%;
 }
 
 .products_container span {
   border-bottom: black 2px solid;
   width: 100%;
-  height: 4em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.products_container span div {
+  max-height: 100%;
+  height: 100%;
+}
+
+.products_container span .product_image {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-bottom: 1em;
+}
+
+.products_container span .product_image img {
+  max-width: 50%;
+  max-height: 100%;
+  padding: 0 0 0 1em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.products_container span .product_image div {
+  margin: 0 auto 0 1em;
+}
+
+.products_container span .products_description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  padding: 1em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.products_container span .products_description h2 {
+  margin: 0;
+}
+
+@media only screen and (max-width: 900px) {
+  .products_container span .products_description h2 {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .products_container span .products_description h2 {
+    font-size: 1.2rem;
+  }
+}
+
+.products_container span .products_description p {
+  margin: 0;
+}
+
+@media only screen and (max-width: 900px) {
+  .products_container span .products_description p {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .products_container span .products_description p {
+    font-size: 1.2rem;
+  }
+}
+
+.products_container span .delete_product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  padding: 0 1em 1em 1em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .products_container span:last-child {
