--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -62,7 +62,7 @@ body, html{
             @include display-flex(row, center);
             min-width: 32em;
             height: 100%;
-            padding-left: 1em;
+            padding-left: 5em;
             margin:0;
                 li{
                     width: auto;
@@ -126,6 +126,8 @@ body, html{
 
 @media only screen and (min-width: 901px) {
   .menu{
+     ul{
+        padding-left: 2em;}
      & .logo-container{
          position: relative;
          height: 100%;
@@ -139,6 +141,17 @@ body, html{
         margin-right: 2em ;
     }
   }
+}
+
+
+@media only screen and (min-width: 1401px) {
+    .menu{
+        ul{
+            padding-left: 5em;}
+            .cart{
+                margin-right: 5em ;
+            }
+    }
 }
 
 @import './home';
